--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -1,16 +1,20 @@
 {
   "name": "backEnd",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "install": "^0.13.0"
-  }
+    "install": "^0.13.0",
+    "mongodb": "^4.1.1",
+    "nodemon": "^2.0.12"
+  },
+  "description": ""
 }
