--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
     "nodemon": "^2.0.12"
   },
