--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon",
-    "start": "node server.js"
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +14,8 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "pg": "^8.7.1"
   },
   "description": ""
 }
