--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
     "neo4j-driver": "^4.3.3",
+    "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1"
   },
