--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "node server.js"
+    "start": "node server.js",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +23,8 @@
     "nodemon": "^2.0.12",
     "pg": "^8.7.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "cypress": "^8.4.1"
+  }
 }
